# dashboard-entity-checker

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml  validate.yml
custom_components/dashboard_entity_checker/: __init__.py  config_flow.py  const.py  coordinator.py  dashboard.py  diagnostics.py  manifest.json  parser.py  sensor.py  services.yaml  strings.json
custom_components/dashboard_entity_checker/translations/: de.json  en.json
tests/: test_automatic_scanning.py  test_config_flow.py  test_coordinator.py  test_dashboard_access.py  test_decluttering.py  test_diagnostics.py  test_ignore_and_events.py  test_integration_setup.py  test_multiple_dashboards.py  test_notifications.py  test_parser.py
