[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-entity-checker"
version = "0.3.2"
description = "Find missing entity references in nested custom Lovelace dashboards, templates, and supported JavaScript"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
